mdapipkg/objects/Region_Health__c.object
<CustomObject>
    <fields>
        <fullName>Pct_chapter_growth_past_FY__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Pct_chapter_growth_past_FY_SUM__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of chapter growth (past FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_chapter_retention_SUM__c</fullName>
        <label>% chapter retention SUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_chapter_retention__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Pct_chapter_retention_SUM__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% chapter retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_chapter_retention_plus_grad_SUM__c</fullName>
        <label>% chapter retention plus grad class SUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_chapter_retention_plus_grad__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Pct_chapter_retention_plus_grad_SUM__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% chapter retention plus graduate class</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_of_Forum_Budget_backend__c</fullName>
        <label>% of Forum Budget backend</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pct_of_Forum_Budget_to_Chapter_Budget__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0,  Pct_of_Forum_Budget_backend__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Forum Budget to Chapter Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_of_Members_in_Networks__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0,  Total_Members_in_Networks__c / No_of_Chapters__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Members in Networks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_of_Spouse_Partners_in_Networks__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0,  Total_S_P_in_Networks__c / No_of_Chapters__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Spouse/Partners in Networks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Can_Graduate_June_30__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, Number_Can_Graduate_June_30__c / Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% members eligible to graduate-June 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Involuntary_Resignations__c</fullName>
        <formula>Number_Resignations_Involuntary__c / ( Number_Primary_Members_June_30__c + Number_Secondary_Members_Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Year</inlineHelpText>
        <label>% involuntary resignations current FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_M2MX_Profile__c</fullName>
        <inlineHelpText>Logic to be determined</inlineHelpText>
        <label>Percentage M2MX Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_Grace_Period__c</fullName>
        <formula>IF(of_Primary_and_Secondary_Members__c = 0, 0, Number_Members_Grace_Period__c /of_Primary_and_Secondary_Members__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of members on Grace Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_in_Forums_Total__c</fullName>
        <inlineHelpText>Percentage of Region Members in Forums/Region Members</inlineHelpText>
        <label>Percentage Members in Forums Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_in_Forums__c</fullName>
        <inlineHelpText>Percentage of Region Members in Forums/Region Members</inlineHelpText>
        <label>Percentage Members in Forums</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_in_Groups__c</fullName>
        <label>Percentage Members in Groups</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Network_Members__c</fullName>
        <inlineHelpText>% of Region members in a network</inlineHelpText>
        <label>Percentage Network Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Network_Spouses__c</fullName>
        <inlineHelpText>% Spouses/Partners in networks</inlineHelpText>
        <label>Percentage Network Spouses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_New_Member_Vouchers_Used__c</fullName>
        <label>Percentage New Member Vouchers Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Participants_YPO_WPO_Events__c</fullName>
        <label>Percentage Participants YPO/WPO Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Region_Growth_Prev__c</fullName>
        <inlineHelpText>% Region Growth in Past Fiscal Year.</inlineHelpText>
        <label>Percentage Region Growth (Previous)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Region_Retention__c</fullName>
        <inlineHelpText>Including Graduating Members</inlineHelpText>
        <label>Percentage Region Retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Spouse_Exchange_Access__c</fullName>
        <label>Percentage Spouse Exchange Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Spouses_in_Groups__c</fullName>
        <label>Percentage Spouses in Groups</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Total_Resignations__c</fullName>
        <formula>(Number_Resignations_Involuntary__c + Number_Resignations_Voluntary__c  )/ (Number_Primary_Members_Current__c + Number_Secondary_Members_Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Year</inlineHelpText>
        <label>% of total resignations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Trained_Officers__c</fullName>
        <inlineHelpText>Percentage of Current Region Officers trained at a GLC or Regional Training.</inlineHelpText>
        <label>Percentage Trained Officers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Voluntary_Resignations__c</fullName>
        <formula>Number_Resignations_Voluntary__c /(Number_Primary_Members_Current__c  + Number_Secondary_Members_Current__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Year</inlineHelpText>
        <label>% voluntary resignations current FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region_Admin_Status__c</fullName>
        <label>Region Admin Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Quarter__c</fullName>
        <inlineHelpText>Q1 = September 30th
Q2 = December 31st
Q3 = March 31st
Q4 = June 30th</inlineHelpText>
        <label>Report Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q-1</fullName>
                </value>
                <value>
                    <fullName>Q-2</fullName>
                </value>
                <value>
                    <fullName>Q-3</fullName>
                </value>
                <value>
                    <fullName>Q-4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Year_Text__c</fullName>
        <formula>TEXT(Report_Year__c)</formula>
        <label>Report Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Year__c</fullName>
        <label>Report Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Forums_w_FMLD_trained_mod_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, S_P_Forums_w_FMLD_trained_moderator__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Spouse/Partners Forums with a moderator who has been trained in a FMLD program</inlineHelpText>
        <label># S/P Forums w/ FMLD trained mod - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_P_Forums_w_FMLD_trained_moderator__c</fullName>
        <inlineHelpText>Number of Spouse/Partners Forums with a moderator who has been trained in a FMLD program</inlineHelpText>
        <label># S/P Forums w/ FMLD trained moderator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_P_at_International_Family_Event__c</fullName>
        <inlineHelpText>Percentag of Spouse/Partners attending an International Family Event</inlineHelpText>
        <label>% S/P at International Family Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>S_P_s_attended_FMLD_since_1_July_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, S_Ps_attended_FMLD_since_1_July__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Spouse/Partners who have attended a FMLD program since 1 July</inlineHelpText>
        <label>Av S/Ps attended FMLD since 1 July - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_P_sattended_FF_since_1_July_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, S_Ps_attended_FF_since_1_July__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Spouse/Partners who have attended a Forum Fundamentals program since 1 July  (enter zero for YPO Gold Chapters unless this applies)</inlineHelpText>
        <label># S/Ps attended FF since 1 July - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Ps_attended_FF_since_1_July__c</fullName>
        <inlineHelpText>Number of Spouse/Partners who have attended a Forum Fundamentals program since 1 July (enter zero for YPO Gold Chapters unless this applies)</inlineHelpText>
        <label># S/Ps attended FF since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Ps_attended_FMLD_since_1_July__c</fullName>
        <inlineHelpText>Number of Spouse/Partners who have attended a FMLD program since 1 July</inlineHelpText>
        <label># S/Ps attended FMLD since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Forum_Participation__c</fullName>
        <label>Spouse/Partner Forum Participation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spouse_Partners_attending_YPO_Event__c</fullName>
        <inlineHelpText>Percentage of Spouse/Partners attending in YPO Event</inlineHelpText>
        <label>% Spouse/Partners attending YPO Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spouse_Partners_w_Access_to_Exchange__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_Pct_S_P_Exchange_Access__c / No_of_Chapters__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Spouse/Partners w/ Access to Exchange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spouse_Partners_w_Complete_Profile__c</fullName>
        <inlineHelpText>Percentage of Spouse/Partners with a &quot;Complete&quot; Profile</inlineHelpText>
        <label>% Spouse/Partners w/Complete Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Chapter_Budget_Forum__c</fullName>
        <label>Total Annual Chapter Budget-Forum (US$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Chapter_budget_Forum_US_Av__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_Annual_Chapter_Budget_Forum__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average Annual Chapter budget for Forum (US$)</inlineHelpText>
        <label>Total Annual Chapter budget-Forum US$-Av</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Members_in_Networks__c</fullName>
        <label>Total % Members in Networks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Number_Chapter_Events__c</fullName>
        <label>Total Number Chapter Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Resignations__c</fullName>
        <formula>Number_Resignations_Involuntary__c + Number_Resignations_Voluntary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of resignations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pct_Members_with_Complete_Profile__c</fullName>
        <inlineHelpText>Percentage of Members with a &quot;Complete&quot; Profile (8 of 12 factors)</inlineHelpText>
        <label>Total % Members with a Complete Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Pct_Officers_Trained_GLC_CLW__c</fullName>
        <inlineHelpText>Percentage of Current Region Officers trained at a GLC or Regional Training.</inlineHelpText>
        <label>Total % Chapter Officers trained GLC/CLW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Pct_S_P_Complete_Profile__c</fullName>
        <inlineHelpText>Percentage of Spouse/Partners with a &quot;Complete&quot; Profile</inlineHelpText>
        <label>Total% S/P Complete Profiles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Pct_S_P_Exchange_Access__c</fullName>
        <label>Total % S/P Exchange Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_S_P_in_Networks__c</fullName>
        <label>Total % S/P in Networks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_of_Chapter_Events_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_Number_Chapter_Events__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Chapter Events</inlineHelpText>
        <label>Total # of Chapter Events Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_members_in_Forum_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_of_members_in_Forum__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members in Forum</inlineHelpText>
        <label>Total # of members in Forum - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_members_in_Forum__c</fullName>
        <inlineHelpText>Total number of members in Forum</inlineHelpText>
        <label>Total # of members in Forum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_resignations_Avg__c</fullName>
        <formula>Total_Number_Resignations__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average Number of Resignations</inlineHelpText>
        <label>Total # of resignations Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_spouse_partners_in_Forum_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_of_spouse_partners_in_Forum__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of spouse/partners in Forum</inlineHelpText>
        <label>Total # of spouse/partners in Forum - Av</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_spouse_partners_in_Forum__c</fullName>
        <inlineHelpText>Total number of spouse/partners in Forum</inlineHelpText>
        <label>Total # of spouse/partners in Forum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ofMembersattendingYPOEventAvg__c</fullName>
        <formula>of_Members_attending_YPO_Event__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Members attending YPO Event Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Cross_Chapter_Events_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Number_YPO_Cross_Chapter_Events__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Cross-Chapter Events (not YPO-YPO Gold joint events)</inlineHelpText>
        <label># of Cross-Chapter Events - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Entrepreneurs__c</fullName>
        <inlineHelpText>% of Entrepreneurs</inlineHelpText>
        <label>% of Entrepreneurs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_FF_workshops_since_1_July_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, of_FF_workshops_since_1_July__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Forum Fundamentals workshops held since 1 July</inlineHelpText>
        <label># of FF workshops since 1 July - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_FF_workshops_since_1_July__c</fullName>
        <inlineHelpText>Number of Forum Fundamentals workshops held since 1 July (enter zero for YPO Gold Chapters unless this applies)</inlineHelpText>
        <label># of FF workshops since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_FMLD_workshops_since_1_July_Avg__c</fullName>
        <formula>of_FMLD_workshops_since_1_July__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Forum Moderator &amp; Leadership Development (FMLD) workshops held since 1 July</inlineHelpText>
        <label># of FMLD workshops since 1 July - Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_FMLD_workshops_since_1_July__c</fullName>
        <inlineHelpText>Number of Forum Moderator &amp; Leadership Development (FMLD) workshops held since 1 July</inlineHelpText>
        <label># of FMLD workshops since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Family_Business_Operators__c</fullName>
        <inlineHelpText>% of Family Business Operators</inlineHelpText>
        <label>% of Family Business Operators</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Female_members_Avg__c</fullName>
        <formula>of_Female_members__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average # of Female members</inlineHelpText>
        <label># of Female members Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Female_members__c</fullName>
        <inlineHelpText># of Female members</inlineHelpText>
        <label># of Female members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Forum_Budget_to_Chapter_Budget__c</fullName>
        <inlineHelpText>Percentage of Forum Budget to Total Chapter Budget</inlineHelpText>
        <label>% of Forum Budget to Chapter Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Male_members_Avg__c</fullName>
        <formula>of_Male_members__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average # of Male members</inlineHelpText>
        <label># of Male members Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Male_members__c</fullName>
        <inlineHelpText># of Male members</inlineHelpText>
        <label># of Male members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Member_Children_Registered_for_YNG__c</fullName>
        <inlineHelpText>Number of Members Children who have registered for YNG+</inlineHelpText>
        <label># of Member Children Registered for YNG+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Member_Forums_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, of_Member_Forums__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Member Forums</inlineHelpText>
        <label># of Member Forums - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Member_Forums__c</fullName>
        <inlineHelpText>Number of Member Forums</inlineHelpText>
        <label># of Member Forums</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Members_Participating_in_a_GCC__c</fullName>
        <inlineHelpText>Number of Chapter Members Participating in a Global Conference Call (GCC)</inlineHelpText>
        <label># of Members Participating in a GCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Members_Post_to_Network_Community__c</fullName>
        <inlineHelpText>Number of Chapter Members Posting to a Network Community</inlineHelpText>
        <label># of Members Post to Network Community</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Members_attended_FMLD_since_1_July__c</fullName>
        <inlineHelpText>Number of members who have attended a FMLD program since 1 July</inlineHelpText>
        <label># of Members attended FMLD since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Members_attending_YPO_Event__c</fullName>
        <inlineHelpText>Number of Members attending non-chapter YPO Events</inlineHelpText>
        <label># of Members attending YPO Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Primary_and_Secondary_Members_Avg__c</fullName>
        <formula>of_Primary_and_Secondary_Members__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Current Primary and Secondary Members</inlineHelpText>
        <label># of Primary and Secondary Members Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Primary_and_Secondary_Members__c</fullName>
        <inlineHelpText>Current Number of Primary and Secondary Members</inlineHelpText>
        <label># of Primary and Secondary Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Professional_Managers__c</fullName>
        <inlineHelpText>% of Professional Managers</inlineHelpText>
        <label>% of Professional Managers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_S_P_at_International_Family_Event__c</fullName>
        <inlineHelpText>Number of Spouse/Partners attending an International Family Event</inlineHelpText>
        <label># of S/P at International Family Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Spouse_Partner_Forums_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, of_Spouse_Partner_Forums__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Spouse/Partner Forums</inlineHelpText>
        <label># of Spouse/Partner Forums - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Spouse_Partner_Forums__c</fullName>
        <inlineHelpText>Number of Spouse/Partner Forums</inlineHelpText>
        <label># of Spouse/Partner Forums</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Spouse_Partners_M2Mx_profile__c</fullName>
        <inlineHelpText>Percentage of Spouse/Partners w/M2MX profile completion</inlineHelpText>
        <label>% of Spouse/Partners M2Mx profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Spouse_Partners_attending_YPO_Event__c</fullName>
        <inlineHelpText>Number of Spouse/Partners attending non-chapter YPO Events</inlineHelpText>
        <label># of Spouse/Partners attending YPO Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_YPO_Gold_members_Avg__c</fullName>
        <formula>of_YPO_Gold_members__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average # of YPO Gold members</inlineHelpText>
        <label># of YPO Gold members Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_YPO_Gold_members__c</fullName>
        <inlineHelpText># of YPO Gold members</inlineHelpText>
        <label># of YPO Gold members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_YPO_members_Avg__c</fullName>
        <formula>of_YPO_members__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average # of YPO members</inlineHelpText>
        <label># of YPO members Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_YPO_members__c</fullName>
        <inlineHelpText># of YPO members</inlineHelpText>
        <label># of YPO members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_chapter_officer_elects_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, of_chapter_officer_elects__c /  No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of chapter officer-elects identified</inlineHelpText>
        <label># of chapter officer-elects - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_chapter_officer_elects__c</fullName>
        <inlineHelpText>Number of chapter officer-elects identified</inlineHelpText>
        <label># of chapter officer-elects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_chapter_retention_incl_grad_class__c</fullName>
        <inlineHelpText>Percentage of chapter retention (including graduating class)</inlineHelpText>
        <label>% of chapter retention (incl grad class)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_children_age_29_under_Avg__c</fullName>
        <formula>of_children_age_29_under__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of children (age 29 &amp; under)</inlineHelpText>
        <label># of children (age 29 &amp; under)-Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_children_age_29_under__c</fullName>
        <inlineHelpText>Number of children (age 29 &amp; under)</inlineHelpText>
        <label># of children (age 29 &amp; under)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_involuntary_resignations_cur_FY_Avg__c</fullName>
        <formula>Number_Resignations_Involuntary__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Involuntary Resignations for current fiscal year</inlineHelpText>
        <label># of involuntary resignations cur FY Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>